tests/ui/consts/const-block-const-bound.stderr
error[E0277]: can't drop `UnconstDrop`
  --> $DIR/const-block-const-bound.rs:16:11
   |
LL |         f(UnconstDrop);
   |         - ^^^^^^^^^^^ the trait `Destruct` is not implemented for `UnconstDrop`
   |         |
   |         required by a bound introduced by this call
   |
   = note: the trait bound `UnconstDrop: Destruct` is not satisfied
note: required by a bound in `f`
  --> $DIR/const-block-const-bound.rs:6:15
   |
LL | const fn f<T: ~const Destruct>(x: T) {}
   |               ^^^^^^^^^^^^^^^ required by this bound in `f`
help: consider borrowing here
   |
LL |         f(&UnconstDrop);
   |           +
LL |         f(&mut UnconstDrop);
   |           ++++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
